# kaiops-gadk1

./: README.md
kaiops-main/: Dockerfile.service  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
kaiops-main/database/: schema.sql
kaiops-main/docs/: WINDOWS_UPDATE_AND_RUN.md
kaiops-main/k8s/: configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  services.yaml
kaiops-main/rag/changes/: chg-1024-payments-timeout.md
kaiops-main/rag/dependencies/: payments-graph.md
kaiops-main/rag/deployments/: deployment-2.5.md
kaiops-main/rag/incidents/: inc-8842-payment-latency.md  inc-9011-database-lag.md
kaiops-main/rag/runbooks/: checkout-pod-restart.md  database-failover.md  payments-latency-rollback.md
kaiops-main/scripts/: run-local-windows.ps1  verify-local-update.ps1
kaiops-main/services/alert-intelligence/: Dockerfile  app.py
kaiops-main/services/alert-intelligence/alert_intelligence/: __init__.py  agent.py
kaiops-main/services/api-gateway/: Dockerfile  app.py
kaiops-main/services/api-gateway/api_gateway/: __init__.py  safety.py
kaiops-main/services/approval-service/: Dockerfile  app.py
kaiops-main/services/closure-service/: Dockerfile  app.py
kaiops-main/services/closure-service/closure_service/: __init__.py  validation.py
kaiops-main/services/common/: Dockerfile
kaiops-main/services/common/common/: __init__.py  config.py  database.py  embeddings.py  kafka.py  logging.py  models.py  repository.py  resilience.py  service.py  (+2 more)
kaiops-main/services/context-agent/: Dockerfile  app.py
kaiops-main/services/model-router/: Dockerfile  app.py
kaiops-main/services/monitoring-adapter/: Dockerfile  app.py
kaiops-main/services/orchestrator/: Dockerfile  app.py
kaiops-main/services/remediation-engine/: Dockerfile  app.py
kaiops-main/services/resolution-agent/: Dockerfile  app.py
kaiops-main/services/ui/: Dockerfile  app.py
kaiops-main/tests/: test_alert_intelligence.py  test_api_gateway_safety.py  test_context_resolution_flow.py  test_kafka_payloads.py  test_local_demo_workflow.py  test_model_router.py  test_models.py  test_rag_ingestion.py  test_remediation_closure.py
(+10 files in other folders)
