[project]
name = "kaiops"
version = "0.1.0"
description = "Agentic incident resolution platform microservices"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "numpy>=2.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-sdk>=1.29.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-json-logger>=3.2.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "streamlit>=1.41.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "services/common",
    "services/api-gateway",
    "services/alert-intelligence",
    "services/context-agent",
    "services/model-router",
    "services/resolution-agent",
    "services/orchestrator",
    "services/remediation-engine",
    "services/closure-service",
]
include = [
    "common*",
    "api_gateway*",
    "alert_intelligence*",
    "context_agent*",
    "model_router*",
    "resolution_agent*",
    "orchestrator*",
    "remediation_engine*",
    "closure_service*",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "services/common",
    "services/api-gateway",
    "services/alert-intelligence",
    "services/context-agent",
    "services/model-router",
    "services/resolution-agent",
    "services/orchestrator",
    "services/approval-service",
    "services/remediation-engine",
    "services/closure-service",
    "services/monitoring-adapter",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["ASYNC110", "UP047"]
